[metadata]
name = cabins-project
version = 0.0.2

[options]
packages =
    cabins-app
    project

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,migrations,doc/*,venv*,local_settings*,trees_tests,management,node_modules,wsgi*
max-line-length = 120
max-complexity = 19

[isort]
atomic=true
combine_as_imports=false
indent=4
known_standard_library=token,tokenize,enum,importlib
known_third_party=django
length_sort=false
line_length=120
multi_line_output=5
order_by_type=false
skip=migrations,node_modules,conftest.py,wsgi.py,venv
wrap_length=120

[prequ]
annotate = yes
wheel_dir = wheels
app_name=cabins-app
github_actions=


wheel_sources =
    local = ./{pkg}

requirements =
    argon2-cffi==20.1.0
    boto3==1.16.25
    celery==5.0.0
    coverage==5.3
    dj-database-url==0.5.0
    django==3.1.3
    django-appconf==1.0.4
    django-cors-headers==3.2.0
    django-debug-toolbar==3.2
    django-environ==0.4.5
    django-extensions==3.1.0
    django-jinja==2.7.0
    django-redis==4.12.1
    django-seo-js==0.3.3
    django-storages==1.10.1
    flake8==3.8.4
    graphene-django==2.13.0
    gunicorn==20.0.4
    isort==5.6.4
    mock==4.0.3
    psycopg2-binary==2.8.5
    pytest-cov==2.10.1
    pytest==6.2.0
    pytest-django==4.1.0
    PyYAML==5.3.1
    redis==3.5.3
    sentry-sdk==0.19.4
    wagtail==2.11.2
    wheel
    git+https://github.com/wgarlock/prelaunch

    cabins-app==0.0.15 (wheel from local)
    


requirements-dev =
    autoflake==1.4
    -e cabins-app


[tool:pytest] 
python_files = tests.py tests_*.py *_tests.py
django_find_project = false
testpaths = ./cabins-app/cabins_test
DJANGO_SETTINGS_MODULE = cabins_test.testproject.settings

[coverage:run]
branch = True
source = cabins
data_file=./.coverage
omit =
    */__init__.py,
    *manage.py,
    *settings*.py,
    *urls.py,
    *admin.py,
    *migrations/*,
    *wsgi.py,
    *conftest.py,
    */extra*
    project/asgi.py
    project/aws.py
    cabins-app/setup.py
    cabins-app/cabins_test
    setup.py

[coverage:report]
#fail_under = 90
show_missing = True


